src/test/ui/span/multiline-span-simple.stderr
error[E0369]: cannot add `()` to `u32`
  --> $DIR/multiline-span-simple.rs:13:18
   |
LL |       foo(1 as u32 +
   |           -------- ^
   |           |
   |           u32
LL | 
LL | /         bar(x,
LL | |
LL | |             y),
   | |______________- ()

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
